# backend/openapi.json
@@ -366,6 +366,28 @@
               "default": 50,
               "title": "Max Sources"
             }
+          },
+          {
+            "name": "extended_min_snr",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "number",
+              "minimum": 0.0,
+              "default": 0.0,
+              "title": "Extended Min Snr"
+            }
+          },
+          {
+            "name": "extended_max_sources",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "minimum": 0,
+              "default": 50,
+              "title": "Extended Max Sources"
+            }
           }
         ],
         "responses": {
@@ -645,6 +667,40 @@
             "type": "integer",
             "title": "Rank"
           },
+          "xcentroid": {
+            "type": "number",
+            "title": "Xcentroid"
+          },
+          "ycentroid": {
+            "type": "number",
+            "title": "Ycentroid"
+          },
+          "snr": {
+            "type": "number",
+            "title": "Snr"
+          },
+          "peak": {
+            "anyOf": [
+              {
+                "type": "number"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Peak"
+          },
+          "flux": {
+            "anyOf": [
+              {
+                "type": "number"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Flux"
+          },
           "object_type": {
             "type": "string",
             "const": "extended",
@@ -656,7 +712,10 @@
         "type": "object",
         "required": [
           "source_id",
-          "rank"
+          "rank",
+          "xcentroid",
+          "ycentroid",
+          "snr"
         ],
         "title": "ExtendedSourceSchema"
       },
